--- a/media_bynder.css
+++ b/media_bynder.css
@@ -144,13 +144,14 @@
     vertical-align: text-top;
 
     list-style-type: none;
+    cursor: pointer;
 }
 
 #edit-bynder-search .item-list .facet_list .facet_title > .item-list {
     position: absolute;
 
-    width: 23%;
     display: none;
+    width: 23%;
     overflow: hidden;
 
     background-color: #fff;
@@ -224,6 +225,8 @@
 }
 
 #edit-bynder-search .item-list .result_list li a {
+    position: relative;
+
     display: block;
     width: 200px;
     padding: 15px;
@@ -239,6 +242,11 @@
     -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.05);
        -moz-box-shadow: 0 2px 0 rgba(0,0,0,0.05);
             box-shadow: 0 2px 0 rgba(0,0,0,0.05);
+}
+
+#edit-bynder-search .item-list .result_list li a.loading .image-holder,
+#edit-bynder-search .item-list .result_list li a.loading .media_object_type_image {
+    opacity: 0.5;
 }
 
 #edit-bynder-search .item-list .result_list li a:hover {
@@ -277,4 +285,47 @@
     max-width: 200px;
     min-height: 100%;
     max-height: 100%;
+}
+
+.alert {
+    padding: 15px;
+    position: absolute;
+    top: 25px;
+    right: 20px;
+
+    border: 1px solid transparent;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+}
+
+.alert-warning {
+    font-size: 14px;
+    color: #8a6d3b;
+
+    border-color: #faebcc;
+    background-color: #fcf8e3;
+}
+
+.alert-error {
+    color: #a94442;
+
+    border-color: #ebccd1;
+    background-color: #f2dede;
+}
+
+.alert-success {
+    color: #3c763d;
+
+    border-color: #d6e9c6;
+    background-color: #dff0d8;
+}
+
+
+body.page-media-browser {
+    overflow-y: scroll;
+}
+
+.media-modal-frame {
+    height: 800px!important;
 }
